package com.mooncowpines.kinostats.ui.components

import androidx.compose.material3.DatePicker
import androidx.compose.material3.DatePickerDialog
import androidx.compose.material3.ExperimentalMaterial3Api
import androidx.compose.material3.SelectableDates
import androidx.compose.material3.rememberDatePickerState
import androidx.compose.runtime.Composable

@OptIn(ExperimentalMaterial3Api:: class)
@Composable
fun KinoCalendar(
    onDismissRequest: () -> Unit,
    onDateSelected: (Long?) -> Unit
) {
    val selectableDates = object : SelectableDates {
        override fun isSelectableDate(utcTimeMillis: Long): Boolean {
            return utcTimeMillis <= System.currentTimeMillis()
        }

        override fun isSelectableYear(year: Int): Boolean {
            return year <= java.time.LocalDate.now().year
        }
    }

    val calendarState = rememberDatePickerState(
        initialSelectedDateMillis = System.currentTimeMillis(),
        selectableDates = selectableDates)

    DatePickerDialog(
        onDismissRequest = onDismissRequest,
        confirmButton = {KinoButton(text = "Ok", onClick = {onDateSelected((calendarState.selectedDateMillis))})},
        dismissButton = {KinoButton(text = "Cancel", onClick = onDismissRequest)},

    ) {
        DatePicker(state = calendarState)
    }

}
