...
        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.CenterVertically
        ) {
            if (rating == null || rating == 0f) {
                Text("Tap to rate...", color = Color.Gray, fontSize = 16.sp)
            } else {
                Row(verticalAlignment = Alignment.CenterVertically) {
                    Text(
                        text = rating.toString(),
                        color = KinoYellow,
                        fontSize = 20.sp,
...
