...
            tint = KinoYellow,
            modifier = Modifier.size(100.dp)
        )
        Spacer(modifier = Modifier.height(KinoSpacing.medium))

        Text(
            text = "Welcome to KinoStats!",
            color = KinoWhite,
            fontWeight = FontWeight.Bold,
            fontSize = 32.sp,
            textAlign = TextAlign.Center
        )
        Spacer(modifier = Modifier.height(KinoSpacing.small))
...
